--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "bd7ed835",
    "metadata": {},
    "outputs": [],
    "source": [
     "from kriptografy import *\n",
-    "import random"
+    "from optimus import *\n",
+    "from Crypto.Cipher import AES "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "id": "33efaed8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xfe\\xd9\\xc0>\\x18\\xf4*\\x16j\\x8b\\xc8\\x13\\xaa\\x0f\\x1am'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "b'\\x03?\\xba\\x89E\\x84\\xd2\\xab\\xa4\\xc1\\xdb~\\xf4\\x85y\\xa7'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encaps_key = 0xdc1584860b4f7b8a02d861032ef66360.to_bytes(16)\n",
+    "k = 0xfed9c03e18f42a166a8bc813aa0f1a6d.to_bytes(16)\n",
+    "print(k)\n",
+    "# Ck = 0x6d5de94bafcb667a2357ae55849f9acd.to_bytes(16)\n",
+    "\n",
+    "Ck = AES.new(encaps_key, AES.MODE_CBC).encrypt(k)\n",
+    "\n",
+    "AES.new(encaps_key, AES.MODE_CBC).decrypt(Ck)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "788db054",
    "metadata": {},
    "outputs": [],
@@ -31,10 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7cb404ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User1 revealed secrets: {'User2': b\"|f\\x07\\x05x\\x15\\xd9\\x93\\x83\\x0ci\\x8f\\xf4\\xefQa,\\x07\\x9e\\x100#\\x07'xT6\\x95\\xa4N\\xad\\xe4\"}\n",
+      "User2 revealed secrets: {'User1': b\"|f\\x07\\x05x\\x15\\xd9\\x93\\x83\\x0ci\\x8f\\xf4\\xefQa,\\x07\\x9e\\x100#\\x07'xT6\\x95\\xa4N\\xad\\xe4\", 'User3': b'A\\xae\\xddod\\x96\\xf2$\\x97.\"lu\\xbf\\x88\\n\\xd7\\x94?\\x8fe\\xe6#O\\xed\\xc2\\xfb\\xb2#(}8'}\n",
+      "User3 revealed secrets: {'User2': b'A\\xae\\xddod\\x96\\xf2$\\x97.\"lu\\xbf\\x88\\n\\xd7\\x94?\\x8fe\\xe6#O\\xed\\xc2\\xfb\\xb2#(}8'}\n",
+      "✅ All shared secrets are consistent across users ✅\n"
+     ]
+    }
+   ],
    "source": [
     "DH_User1 = UserSecretSharer(\"User1\", PublicKeyInfrastructure)\n",
     "DH_User2 = UserSecretSharer(\"User2\", PublicKeyInfrastructure)\n",
@@ -72,10 +119,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "16fca49b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peter -> Bean: {'package_type': 'new_send', 'name': 'Peter', 'DHE_piece': b')\\xd4\\xd1H\\xf4o\\xa7G!\\x9b\\x82c\\x19\\xc5\\x1b\\xd0R\\x19\\xb1\\xc6tD\\xe4/s\\xa0\\x03\\xe2\\xd3\\xc3\\xb6\\xc1\\x8a\\xcc-n\\x08-\\xb8\\xae\\x97\\xa3p\\xa3 6\\xae\\x92Aif\\x1d\\xa6\\x9fA\\xdd', 'encapsulated_key': b'\\xe8\\x01X\\x8f\\x95\\xac\\\\)\\xcdk\\xa4\\xff\\x83\\xe66\\xcd', 'message': b'cW!\\xefX\\xa2\\x0ef\\xfc\\x80*\\xf9\\xfd}^\\xe3'}\n",
+      "Peter -> Matthew: {'package_type': 'new_send', 'name': 'Peter', 'DHE_piece': b'\\xab\\x13\\xbf{pZ8\\xd6\\x18\\xea\\x07\\xf5\\xbdzG\\x04\\x16\\x8d\\x1a\\x07\\x1c\\xc1\\xd7\\xee#y[\\xd0\\xa0\\x05;\\xf1\\xb6\\x99\\x82\\xbc\\xfc\\xdc]O\\xbfk\\xd1\\xafG\\n\\x07h\\x85\\xbe\\x87\\x8b\\x0b\\x13(\\xe7', 'encapsulated_key': b')\\xc2\\x02\\x0e[\\x90B\\x08+\\xbd\\xf7Z\\xf8\\xf4*\\xbd', 'message': b'\\xbf\\xbcp|\\x1a\\x87\\xa8]\\rCF\\xc8\\x15H\\xd8\\xb5'}\n",
+      "Matthew -> Bean: {'package_type': 'new_send', 'name': 'Matthew', 'DHE_piece': b'$\\x8ag\\xfcPV\\xd6P\"\\n\\x08\\x14b{\\x11\\x86w9)\\xf9\\xe7Wm\\xc0>\\x19\\xf0?@\\xecBk\\x16;\\xba\\x9b\\x1c\\x04\\x02\\x9e\\x1a$\\xa2\\x91\\xb3A\\xd6\\xca\\x9d|\\x8dx\\xd5[\\xea\\xc1', 'encapsulated_key': b'#f\\xb0-\\xae \\xbb\\xd3\\xd7\\xbc\\xc0y\\xb4,\\xff2', 'message': b'R\\xcd\\x06\\xa2\\xc8\\xcc\\x10\\xb3\\xe2b\\x01\\x05\\x7fz\\rW'}\n",
+      "Bean -> Peter: {'package_type': 'established_send', 'name': 'Bean', 'message': b'H\\xe9j+\\x9en\\xa2\\xae\\x86z]\\xcd\\xcaNf\\x93\\x05\\x12\\x1f\\n:6Hs\\x05E\\xd3\\xfeH\\x01\\xa34'}\n",
+      "Peter -> Matthew: {'package_type': 'established_send', 'name': 'Peter', 'message': b'\\xed\\x93\\xd2\\xff\\x0cH\\x83o\\x013\\xdb3\\x83n\\x0e\\xd0\\xb6\\xb7\\xa4N+\\x0c\\xf5k\\xfc\\xb8U\\xd1\\xf6\\xe5fl'}\n",
+      "Matthew -> Peter: {'package_type': 'established_send', 'name': 'Matthew', 'message': b'\\x92\\xd2\\xb1\\xfe;\\xcaxOe\\x91\\xf9\\xc6\\xa1\\xc1\\x92.8\\x85\\x03=\\xbex\\xbb\\xc8\\x998\\x92$\\xf3\\x03\\xab='}\n",
+      "\n",
+      "---- Peter ----\n",
+      "Chat with Bean:\n",
+      "\t-Sent:  Pryvit, Bib!\n",
+      "\t-Received:  PetaB fren! Matthew not fren!\n",
+      "Chat with Matthew:\n",
+      "\t-Sent:  Pryvit, Fren!\n",
+      "\t-Sent:  PetaB fren! Why not fren!\n",
+      "\t-Received:  Ti schizoFRENik! :D\n",
+      "\n",
+      "---- Matthew ----\n",
+      "Chat with Peter:\n",
+      "\t-Received:  Pryvit, Fren!\n",
+      "\t-Received:  PetaB fren! Why not fren!\n",
+      "\t-Sent:  Ti schizoFRENik! :D\n",
+      "Chat with Bean:\n",
+      "\t-Sent:  PetaB not fren!\n",
+      "\n",
+      "---- Bean ----\n",
+      "Chat with Peter:\n",
+      "\t-Received:  Pryvit, Bib!\n",
+      "\t-Sent:  PetaB fren! Matthew not fren!\n",
+      "Chat with Matthew:\n",
+      "\t-Received:  PetaB not fren!\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "Peter = UserHybridTalker(\"Peter\", PublicKeyInfrastructure)\n",
     "Bean = UserHybridTalker(\"Bean\", PublicKeyInfrastructure)  \n",
@@ -105,20 +190,16 @@
     "print(\"Matthew -> Peter:\", tx)\n",
     "Peter.hybrid_receive(tx)\n",
     "\n",
-    "Leak_from_Peter = Peter.leak_chats()['chats']\n",
-    "Leak_from_Matthew = Matthew.leak_chats()['chats']\n",
-    "Leak_from_Bean = Bean.leak_chats()['chats']\n",
+    "print()\n",
+    "Peter.leak_chats()\n",
+    "Matthew.leak_chats()\n",
+    "Bean.leak_chats()\n",
     "\n",
-    "print(\"Peter's chat leak:\", Leak_from_Peter)\n",
-    "print(\"Matthew's chat leak:\", Leak_from_Matthew)\n",
-    "print(\"Bean's chat leak:\", Leak_from_Bean)\n",
+    "# print(\"Peter's chat leak:\", Leak_from_Peter)\n",
+    "# print(\"Matthew's chat leak:\", Leak_from_Matthew)\n",
+    "# print(\"Bean's chat leak:\", Leak_from_Bean)\n",
     "\n",
-    "# Verify that the chat leaks are consistent\n",
-    "assert [e.replace(\"Received:\", \"Sent:\") for e in Leak_from_Peter.get(\"Bean\", None)] == Leak_from_Bean.get(\"Peter\", None), \"❌ Chat leaks are not consistent between Peter and Bean. ❌\"\n",
-    "assert [e.replace(\"Received:\", \"Sent:\") for e in Leak_from_Peter.get(\"Matthew\", None)] == Leak_from_Matthew.get(\"Peter\", None), \"❌ Chat leaks are not consistent between Peter and Matthew. ❌\"\n",
-    "assert [e.replace(\"Received:\", \"Sent:\") for e in Leak_from_Bean.get(\"Matthew\", None)] == Leak_from_Matthew.get(\"Bean\", None), \"❌ Chat leaks are not consistent between Bean and Matthew. ❌\"\n",
-    "\n",
-    "print(\"✅ All chat leaks are consistent across users ✅\")"
+    "# print(\"✅ All chat leaks are consistent across users ✅\")"
    ]
   },
   {
@@ -136,15 +217,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can't concat int to bytes",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m Listener \u001b[38;5;241m=\u001b[39m DigitalSignatureUser(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mListener\u001b[39m\u001b[38;5;124m\"\u001b[39m, PublicKeyInfrastructure)\n\u001b[0;32m      4\u001b[0m Message \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSong lyrics: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOi u poli, oi u poli, tam de zhyvut\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m lyudy!\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 5\u001b[0m SignatureResp \u001b[38;5;241m=\u001b[39m \u001b[43mSinger\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msign_message\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMessage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSinger\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ms signature:\u001b[39m\u001b[38;5;124m\"\u001b[39m, SignatureResp)\n\u001b[0;32m      8\u001b[0m bSignCorrect \u001b[38;5;241m=\u001b[39m Listener\u001b[38;5;241m.\u001b[39mverify_signature(SignatureResp)\n",
-      "File \u001b[1;32me:\\dev\\EC\\EC_Lab2\\kriptografy.py:174\u001b[0m, in \u001b[0;36mDigitalSignatureUser.sign_message\u001b[1;34m(self, message)\u001b[0m\n\u001b[0;32m    171\u001b[0m         R \u001b[38;5;241m=\u001b[39m k \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mEC\u001b[38;5;241m.\u001b[39mG\n\u001b[0;32m    172\u001b[0m         r \u001b[38;5;241m=\u001b[39m R\u001b[38;5;241m.\u001b[39mx \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mEC\u001b[38;5;241m.\u001b[39mn\n\u001b[1;32m--> 174\u001b[0m     s \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mpow\u001b[39m(k, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mEC\u001b[38;5;241m.\u001b[39mn) \u001b[38;5;241m*\u001b[39m (\u001b[43mz\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msecret_key\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mr\u001b[49m)) \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mEC\u001b[38;5;241m.\u001b[39mn\n\u001b[0;32m    176\u001b[0m signature \u001b[38;5;241m=\u001b[39m (r, s)\n\u001b[0;32m    178\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[0;32m    179\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpackage_type\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msigned_message\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    180\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname,\n\u001b[0;32m    181\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessage\u001b[39m\u001b[38;5;124m\"\u001b[39m: message,\n\u001b[0;32m    182\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msignature\u001b[39m\u001b[38;5;124m\"\u001b[39m: signature\n\u001b[0;32m    183\u001b[0m }\n",
-      "\u001b[1;31mTypeError\u001b[0m: can't concat int to bytes"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Singer's signature: {'package_type': 'signed_message', 'name': 'Singer', 'message': \"Song lyrics: 'Oi u poli, oi u poli, tam de zhyvut' lyudy!  -- (c) Botynok'\", 'signature': (6696397760501658686796646345827764133672726255529551632935220199999, 15712000345868455943833423223180628117096294121875012000924467568471)}\n",
+      "✅ Listener verified the signature successfully. ✅\n"
      ]
     }
    ],
@@ -152,7 +229,7 @@
     "Singer = DigitalSignatureUser(\"Singer\", PublicKeyInfrastructure)\n",
     "Listener = DigitalSignatureUser(\"Listener\", PublicKeyInfrastructure)\n",
     "\n",
-    "Message = \"Song lyrics: 'Oi u poli, oi u poli, tam de zhyvut' lyudy!'\"\n",
+    "Message = \"Song lyrics: 'Oi u poli, oi u poli, tam de zhyvut' lyudy!  -- (c) Botynok'\"\n",
     "SignatureResp = Singer.sign_message(Message)\n",
     "print(\"Singer's signature:\", SignatureResp)\n",
     "\n",
@@ -180,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
